Here's the commented version of the code:

```c++
// Copyright 2018 gRPC authors.

// Header guard to prevent multiple inclusions
#ifndef GRPC_SRC_CPP_EXT_FILTERS_CENSUS_CLIENT_FILTER_H
#define GRPC_SRC_CPP_EXT_FILTERS_CENSUS_CLIENT_FILTER_H

// Include necessary platform support and gRPC headers
#include <grpc/support/port_platform.h>
#include <grpcpp/support/client_interceptor.h>
#include <grpcpp/support/interceptor.h>

// Include ABSL and internal gRPC headers
#include "absl/status/statusor.h"
#include "src/core/lib/channel/channel_args.h"
#include "src/core/lib/channel/channel_fwd.h"
#include "src/core/lib/channel/promise_based_filter.h"
#include "src/core/lib/promise/arena_promise.h"
#include "src/core/lib/transport/transport.h"

namespace grpc {
namespace internal {

// OpenCensusClientFilter is a ChannelFilter implementation that integrates OpenCensus
// tracing functionality for client-side gRPC calls.
class OpenCensusClientFilter : public grpc_core::ChannelFilter {
 public:
  // Static channel filter instance
  static const grpc_channel_filter kFilter;

  // Returns the type name of this filter
  static absl::string_view TypeName() { return "opencensus_client"; }

  // Factory method to create an instance of OpenCensusClientFilter
  // Args:
  //   args: Channel configuration arguments
  //   filter_args: Additional filter-specific arguments
  // Returns:
  //   A StatusOr containing either the created filter or an error status
  static absl::StatusOr<std::unique_ptr<OpenCensusClientFilter>> Create(
      const grpc_core::ChannelArgs& args, ChannelFilter::Args filter_args);

  // Constructor
  // Args:
  //   tracing_enabled: Flag to control whether tracing is enabled
  explicit OpenCensusClientFilter(bool tracing_enabled)
      : tracing_enabled_(tracing_enabled) {}

  // Creates a promise for handling a call
  // Args:
  //   call_args: Arguments for the call
  //   next_promise_factory: Factory for creating the next promise in the chain
  // Returns:
  //   A promise that will handle the call metadata
  grpc_core::ArenaPromise<grpc_core::ServerMetadataHandle> MakeCallPromise(
      grpc_core::CallArgs call_args,
      grpc_core::NextPromiseFactory next_promise_factory) override;

 private:
  bool tracing_enabled_ = true;  // Controls whether tracing is enabled for this filter
};

// Factory class for creating OpenCensus client interceptors
class OpenCensusClientInterceptorFactory
    : public grpc::experimental::ClientInterceptorFactoryInterface {
 public:
  // Creates a new client interceptor instance
  // Args:
  //   info: Information about the RPC call
  // Returns:
  //   Pointer to the created interceptor
  grpc::experimental::Interceptor* CreateClientInterceptor(
      grpc::experimental::ClientRpcInfo* info) override;
};

}  // namespace internal
}  // namespace grpc

#endif  // GRPC_SRC_CPP_EXT_FILTERS_CENSUS_CLIENT_FILTER_H
```

Key improvements made:
1. Added detailed class-level comments explaining the purpose of each class
2. Added parameter and return value documentation for all methods
3. Added comments for member variables
4. Improved namespace closing comments
5. Added comment for the header guard
6. Added comments explaining the purpose of included headers
7. Maintained consistent comment style throughout
8. Added more context about the OpenCensus integration purpose

The comments now provide a clear understanding of:
- What each class does
- How the components interact
- The purpose of each method
- The meaning of parameters and return values
- Configuration options (like tracing_enabled_)